# xlm-ens

./: Cargo.toml  README.md
.github/workflows/: ci.yml
artifacts/: contract-spec-report.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: auction.rs  config.rs  mod.rs  portfolio.rs  register.rs  subdomain.rs
contracts/auction/src/: lib.rs  test.rs
contracts/nft/src/: lib.rs  test.rs
contracts/registrar/src/: lib.rs  test.rs
contracts/resolver/src/: lib.rs  test.rs
docs/: benchmarks.md  compatibility.md  contract-specs.md  schemas.md  testnet-operator-runbook.md
scripts/: bench.sh  check-contract-specs.sh  gen-specs.sh
