[workspace]
members = [
    "contracts/registry",
    "contracts/resolver",
    "contracts/registrar",
    "contracts/auction",
    "contracts/subdomain",
    "contracts/nft",
    "contracts/bridge",
    "packages/xlm-ns-sdk",
    "packages/xlm-ns-common",
    "packages/xlm-ns-monitor",
    "cli",
    "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["ik"]
repository = "https://github.com/Soroban-Ens/xlm-ens"
