[package]
name = "xlm-ns-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
xlm-ns-auction = { path = "../contracts/auction" }
xlm-ns-common = { path = "../packages/xlm-ns-common" }
xlm-ns-sdk = { path = "../packages/xlm-ns-sdk" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
